// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbound Metrics for a workload renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              undefined,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            undefined,
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                undefined,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              undefined,
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Metrics for a service renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              undefined,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            undefined,
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                undefined,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              undefined,
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Outbound Metrics for a workload renders initial layout 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Metrics
    direction={0}
    isPageVisible={true}
    namespace="ns"
    object="svc"
    objectType={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        undefined,
        <MetricsOptionsBar
          direction={0}
          labelValues={Map {}}
          metricReporter="destination"
          onLabelsFiltersChanged={[Function]}
          onOptionsChanged={[Function]}
          onRefresh={[Function]}
          onReporterChanged={[Function]}
        />,
        <div
          className="card-pf"
        >
          <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "direction": 0,
          "labelValues": Map {},
          "metricReporter": "destination",
          "onLabelsFiltersChanged": [Function],
          "onOptionsChanged": [Function],
          "onRefresh": [Function],
          "onReporterChanged": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row row-cards-pf"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="card-pf-accented card-pf-aggregate-status"
              >
                <div
                  className="card-pf-body"
                />
              </div>
            </div>
          </div>,
          "className": "card-pf",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>,
              undefined,
            ],
            "className": "row row-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>,
                "className": "col-xs-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-body"
                  />,
                  "className": "card-pf-accented card-pf-aggregate-status",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "className": "card-pf-body",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            undefined,
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          undefined,
          <MetricsOptionsBar
            direction={0}
            labelValues={Map {}}
            metricReporter="destination"
            onLabelsFiltersChanged={[Function]}
            onOptionsChanged={[Function]}
            onRefresh={[Function]}
            onReporterChanged={[Function]}
          />,
          <div
            className="card-pf"
          >
            <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "direction": 0,
            "labelValues": Map {},
            "metricReporter": "destination",
            "onLabelsFiltersChanged": [Function],
            "onOptionsChanged": [Function],
            "onRefresh": [Function],
            "onReporterChanged": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row row-cards-pf"
            >
              <div
                className="col-xs-12"
              >
                <div
                  className="card-pf-accented card-pf-aggregate-status"
                >
                  <div
                    className="card-pf-body"
                  />
                </div>
              </div>
            </div>,
            "className": "card-pf",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xs-12"
                >
                  <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>
                </div>,
                undefined,
              ],
              "className": "row row-cards-pf",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-pf-accented card-pf-aggregate-status"
                  >
                    <div
                      className="card-pf-body"
                    />
                  </div>,
                  "className": "col-xs-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-pf-body"
                    />,
                    "className": "card-pf-accented card-pf-aggregate-status",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ],
                      "className": "card-pf-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              undefined,
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
